Update AccessLogContextTest.java